# quiz-admin

./: README.md  pyproject.toml
data/: linux_01.yaml
src/quiz_admin/: __init__.py  __main__.py
