[project]
name = "quiz-admin"
version = "0.1.0"
description = "CLI for controlling the quiz game"
authors = [
    {name = "Martin Zeleny", email = "martin.zeleny@volny.cz"},
]
readme = "README.md"
license = {text = "MIT"}

requires-python = ">=3.13"
dependencies = [
    "aioconsole>=0.8.2",
    "websockets>=15.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
quiz-admin = "quiz_admin.__main__:main"
