[project]
name = "quiz-admin"
version = "0.1.0"
description = "CLI for controlling the quiz game"
authors = [
    {name = "Martin Zeleny", email = "martin.zeleny@volny.cz"},
]
readme = "README.md"
license = {text = "MIT"}

requires-python = ">=3.13"
dependencies = [
    "aioconsole>=0.8.2",
    "quiz-common",
    "ruamel-yaml>=0.18.17",
    "websockets>=15.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
quiz-common = { git = "https://github.com/quiz-cli/quiz-common.git", rev = "main" }

[dependency-groups]
dev = [
    "ruff>=0.14.10",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D203",
    "D212",
    "COM812",
    "T201",
]

[project.scripts]
quiz-admin = "quiz_admin.__main__:main"
